fixed white space

--- a/Full-Project-Refactoring/index.css
+++ b/Full-Project-Refactoring/index.css
@@ -49,7 +49,7 @@ a.cta-btn {
     background: #FC85AE;
     padding: .2em .4em;
     display: inline-block;
-    border-radius: 2em;
+    border-radius: .2em;
     font-size: .9em;
     color: #303A52;
     font-weight: bold;
@@ -59,7 +59,7 @@ a.cta-btn {
 
 nav {
     /* line-height: 2.4em; */
-    padding: 1em;
+    /* padding: 1em; */
     position: fixed;
     background: #576483;
     height: 100vh;
@@ -85,6 +85,7 @@ nav svg {
 nav ul li a {
     display: block;
     font-size: 1.2em;
+    padding: .8em 1em;
 }
 
 .selected {
@@ -162,4 +163,8 @@ header {
 
 ul.data {
     padding: .6em;
+}
+
+.inner-wrapper {
+    padding: 1em;
 }
